# book-shop

./: Makefile  pyproject.toml
bot/: config.py  main.py
bot/database/: base.py  models.py
bot/handlers/: __init__.py  catalog.py  info.py  profile.py  start.py
bot/keyboards/: inline.py  reply.py
bot/middlewares/: __init__.py  base.py  user.py
migration/: env.py
